# discord-tickets

./: .gitignore  Cargo.toml  README.md
backend/backend-svc/: Cargo.toml
backend/backend-svc/src/: discord_bot.rs  main.rs
backend/diagrams/: architecture.py
backend/discord-bot/: Cargo.toml
backend/discord-bot/src/: main.rs
