[package]
name = "backend-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
axum = { version = "0.5.4", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"