[package]
name = "backend-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
axum = { version = "0.5.4", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = "2.2.1"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.10.0"
anyhow = "1.0.57"
futures = "0.3.21"
reqwest = "0.11.10"
async-trait = "0.1.53"
