[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
author = "Thomas Nicollet <thomas.nicollet@nebulis.io>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.1", features = ["full"] }
axum = { version = "0.5.4", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.10.0"

[dependencies.serenity]
default-features = false
version = "0.11"
features = ["builder", "cache", "client", "gateway", "http", "model", "time", "unstable_discord_api", "rustls_backend"]